Disable Javascript due to incompatibility of SpringBoot 3 Dependency on ParseOnce Enabled but Truffle languages disabling ParseOnce on current Release https://github.com/oracle/graal/issues/5650 Add UserCharacteristic to reflect-config.json to make it available during runtime for JacksonMapper. Otherwise Parsing Consents breaks.

--- a/pom.xml
+++ b/pom.xml
@@ -39,7 +39,8 @@
 				<artifactId>native-maven-plugin</artifactId>
 				<configuration>
 					<buildArgs>
-						<buildArg>--language:js --no-fallback -J-Xmx10g -H:ResourceConfigurationFiles=./resource-config.json</buildArg>
+<!--						<buildArg>&#45;&#45;language:js &#45;&#45;no-fallback -J-Xmx10g -H:ResourceConfigurationFiles=./resource-config.json</buildArg>-->
+						<buildArg> --no-fallback -J-Xmx10g</buildArg>
 					</buildArgs>
 				</configuration>
 			</plugin>
